# monitor-gitlab-jobs

./: README.md  pyproject.toml
src/monitor_gitlab_jobs/: cli.py
