[project]
name = "monitor-gitlab-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-gitlab>=6.0.0",
    "rich>=14.0.0",
]

[project.scripts]
monitor-gitlab-jobs = "monitor_gitlab_jobs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
